Fixed extra spacing on mobile landing page

--- a/style.css
+++ b/style.css
@@ -286,11 +286,10 @@ nav {
     header p{
         margin: 10px 0px;
         font-size: 18px;
-        padding-bottom: 400px;
+        padding-bottom: 210px;
         width: 75%;
         margin-left: auto;
         margin-right: auto;
-
     }
 
     .typewriter{
